<resources>
    <string name="app_name">Pirate Places</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="already_at_end">You are already on the last place</string>
    <string name="already_at_start">You are already on the first place</string>
    <string name="checkin_button">Check In!</string>
    <string name="checked_in">Checked In</string>
    <string name="not_checked_in">Not Checked In</string>
    <string name="checked_in_message">You Checked In!</string>
    <string name="place_name_label">Place Name</string>
    <string name="place_name_hint">Enter the name of the Pirate Place here</string>
    <string name="visited_with_hint">Click here to select your guest</string>
    <string name="visited_location_with_hint"> No Location Checked In!</string>
    <string name="place_guests_label">Guest</string>
    <string name="place_location_label">Location Visited</string>
    <string name="new_pirate_place">New Pirate Place</string>
    <string name="place_details">Details</string>
    <string name="place_photo_button_description">Take photo of place</string>
    <string name="place_photo_no_image_description">
        Pirate place photo (not set)
    </string>
    <string name="place_photo_image_description">Pirate place photo (set)</string>
    <string name="camera_message">Clicked camera button</string>
    <string name="share_place_text">Share Your Visit</string>
    <string name="share_place_text_checkin">Check In</string>
    <string name="share_message_no_guest">I just visited %1$s on %2$s at %3$s!</string>
    <string name="share_message_with_guest">I just visited %1$s with %4$s on %2$s at %3$s!</string>
    <string name="share_place_subject">Just visited a PiratePlace!</string>
    <string name="title_activity_places_map">Map</string>
    <string name="view_places_map">View Places Map</string>
</resources>